// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlatLoader2 should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  width: 45px;
  height: 50px;
  text-align: center;
  font-size: 10px;
}

.c2 {
  display: inline-block;
  width: 15%;
  height: 100%;
  background-color: #10ADE4;
  -webkit-animation: kCGIFG 1.2s infinite ease-in-out;
  animation: kCGIFG 1.2s infinite ease-in-out;
}

.c1 {
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}

.c3 {
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}

.c4 {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}

.c5 {
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}

.c6 {
  -webkit-animation-delay: -0.7s;
  animation-delay: -0.7s;
}

<FlatLoader2
  height="50px"
  width="45px"
>
  <styled.div
    height="50px"
    width="45px"
  >
    <div
      className="c0"
      height="50px"
      width="45px"
    >
      <Styled(styled.div)>
        <styled.div
          className="c1"
        >
          <div
            className="c1 c2"
          />
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <styled.div
          className="c3"
        >
          <div
            className="c3 c2"
          />
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <styled.div
          className="c4"
        >
          <div
            className="c4 c2"
          />
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <styled.div
          className="c5"
        >
          <div
            className="c5 c2"
          />
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <styled.div
          className="c6"
        >
          <div
            className="c6 c2"
          />
        </styled.div>
      </Styled(styled.div)>
    </div>
  </styled.div>
</FlatLoader2>
`;

exports[`FlatLoader2 should render correctly with height 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  width: 45px;
  height: 100px;
  text-align: center;
  font-size: 10px;
}

.c2 {
  display: inline-block;
  width: 15%;
  height: 100%;
  background-color: #10ADE4;
  -webkit-animation: kCGIFG 1.2s infinite ease-in-out;
  animation: kCGIFG 1.2s infinite ease-in-out;
}

.c1 {
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}

.c3 {
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}

.c4 {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}

.c5 {
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}

.c6 {
  -webkit-animation-delay: -0.7s;
  animation-delay: -0.7s;
}

<FlatLoader2
  height="100px"
  width="45px"
>
  <styled.div
    height="100px"
    width="45px"
  >
    <div
      className="c0"
      height="100px"
      width="45px"
    >
      <Styled(styled.div)>
        <styled.div
          className="c1"
        >
          <div
            className="c1 c2"
          />
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <styled.div
          className="c3"
        >
          <div
            className="c3 c2"
          />
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <styled.div
          className="c4"
        >
          <div
            className="c4 c2"
          />
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <styled.div
          className="c5"
        >
          <div
            className="c5 c2"
          />
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <styled.div
          className="c6"
        >
          <div
            className="c6 c2"
          />
        </styled.div>
      </Styled(styled.div)>
    </div>
  </styled.div>
</FlatLoader2>
`;

exports[`FlatLoader2 should render correctly with width 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  width: 100px;
  height: 50px;
  text-align: center;
  font-size: 10px;
}

.c2 {
  display: inline-block;
  width: 15%;
  height: 100%;
  background-color: #10ADE4;
  -webkit-animation: kCGIFG 1.2s infinite ease-in-out;
  animation: kCGIFG 1.2s infinite ease-in-out;
}

.c1 {
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}

.c3 {
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}

.c4 {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}

.c5 {
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}

.c6 {
  -webkit-animation-delay: -0.7s;
  animation-delay: -0.7s;
}

<FlatLoader2
  height="50px"
  width="100px"
>
  <styled.div
    height="50px"
    width="100px"
  >
    <div
      className="c0"
      height="50px"
      width="100px"
    >
      <Styled(styled.div)>
        <styled.div
          className="c1"
        >
          <div
            className="c1 c2"
          />
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <styled.div
          className="c3"
        >
          <div
            className="c3 c2"
          />
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <styled.div
          className="c4"
        >
          <div
            className="c4 c2"
          />
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <styled.div
          className="c5"
        >
          <div
            className="c5 c2"
          />
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <styled.div
          className="c6"
        >
          <div
            className="c6 c2"
          />
        </styled.div>
      </Styled(styled.div)>
    </div>
  </styled.div>
</FlatLoader2>
`;
